# mailing_service

./: .env.sample  pyproject.toml
blog/: models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
main_app/: admin.py  forms.py  models.py  services.py  urls.py  views.py
main_app/management/commands/: runapscheduler.py
main_app/migrations/: 0001_initial.py  0002_mailingsetup.py  0003_mailingmessage_mailingsetup_message.py  0004_log.py  0005_client_owner_mailingmessage_owner_mailingsetup_owner.py  0006_alter_mailingsetup_options.py  0007_mailingsetup_next_send.py  0008_log_client.py  0009_mailingsetup_is_published.py
main_app/templates/main_app/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  home.html  index.html  log_list.html  mailingmessage_confirm_delete.html  mailingmessage_detail.html  mailingmessage_form.html  mailingmessage_list.html  mailingsetup_confirm_delete.html  mailingsetup_detail.html  mailingsetup_form.html  mailingsetup_list.html
main_app/templates/main_app/includes/: inc_menu.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: recovery_form.html  user_form.html
