[tool.poetry]
name = "mailing-service"
version = "0.1.0"
description = ""
authors = ["Yelen Prilutskay"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.2"
psycopg2-binary = "^2.9.9"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
